# python-client

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  DOCUMENTATION_SUMMARY.md  FILTER_HELPERS_README.md  GITHUB_INSTALL_SUMMARY.md  IDENTIFIER_STRUCTURED_DATA.md  INSTALL_FROM_GITHUB.md  LICENSE  MANIFEST.in  QUICK_INSTALL.md  README.md  SECURITY.md  index.html  lookup_zelle.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_filter_helpers.py  test_stream_with_helper.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml  security.yml  test.yml
api-reference/client/: index.html
api-reference/exceptions/: index.html
api-reference/models/: index.html
changelog/: index.html
cli-reference/cases/: index.html
cli-reference/journal/: index.html
cli-reference/overview/: index.html
cli-reference/profile/: index.html
cli-reference/search/: index.html
cli-reference/streams/: index.html
development/contributing/: index.html
development/releases/: index.html
development/testing/: index.html
docs/: changelog.md  consumer-guide.md  index.md
docs/api-reference/: client.md  exceptions.md  models.md
docs/cli-reference/: cases.md  journal.md  overview.md  profile.md  search.md  streams.md
docs/development/: contributing.md  releases.md  testing.md
docs/examples/: advanced.md  basic-usage.md
docs/getting-started/: authentication.md  installation.md  quickstart.md
docs/user-guide/: cases.md  in-progress-activities.md  journal-entries.md  media.md  search.md  streams.md  tags.md
examples/: automation_management_example.py  bank_account_detection.py  case_management.py  consumer_polling_example.py  consumer_sse_example.py  detection_with_evidence.py  email_example.py  identifier_stream_example.py  in_progress_activity_example.py  phone_call_example.py  reports_example.py  search_example.py  simple_detection.py  simple_media_upload.py  stream_management.py  tags_example.py  text_conversation_example.py  text_conversation_with_continuation.py  views_example.py  websocket_custom_handlers.py  websocket_notifications.py
examples/advanced/: index.html
examples/basic-usage/: index.html
getting-started/authentication/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
scambus_cli/: __init__.py  auth_device.py  cli.py  config.py  utils.py
scambus_cli/commands/: automations.py  cases.py  exports.py  journal.py  media.py  profile.py  reports.py  search.py  streams.py  tags.py  views.py
scambus_client/: __init__.py  client.py  config.py  exceptions.py  models.py  types.py  websocket_client.py
scripts/: test_is_test_stream_filtering.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_client.py  test_models.py
tests/integration/: __init__.py  test_integration.py  test_stream_e2e.py
user-guide/cases/: index.html
user-guide/in-progress-activities/: index.html
user-guide/journal-entries/: index.html
user-guide/media/: index.html
user-guide/search/: index.html
user-guide/streams/: index.html
user-guide/tags/: index.html
