[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scambus"
version = "0.1.0"
description = "Official Python client for Scambus - submit scam reports and subscribe to data streams"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Scambus Team"}
]
keywords = ["scambus", "scam", "fraud", "detection", "reporting", "anti-fraud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Internet",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.31.0",
    "websockets>=12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "types-requests",
    "pre-commit>=3.0.0",
    "bandit[toml]>=1.7.0",
    "pydocstyle>=6.3.0",
]

[project.urls]
Homepage = "https://github.com/scambus/scambus-python-client"
Documentation = "https://docs.scambus.net"
Repository = "https://github.com/scambus/scambus-python-client"
Issues = "https://github.com/scambus/scambus-python-client/issues"
Changelog = "https://github.com/scambus/scambus-python-client/blob/main/CHANGELOG.md"

[project.scripts]
scambus = "scambus_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scambus_client*", "scambus_cli*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = false
disable_error_code = ["assignment", "arg-type", "return-value", "union-attr", "attr-defined", "call-overload"]

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # exception chaining - use raise from
    "C901",  # too complex
    "E402",  # module level import not at top of file
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=scambus_client --cov=scambus_cli --cov-report=term-missing --cov-report=html --cov-fail-under=20"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests",
]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # Skip assert_used check (needed for tests)

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104"]  # Ignore missing module and package docstrings
